--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
       <url>https://repo.openrs2.dev/repository/openrs2/</url>
       <releases>
         <enabled>true</enabled>
+        <updatePolicy>never</updatePolicy>
       </releases>
       <snapshots>
         <enabled>false</enabled>
