--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
       <version>${openrs2.natives.version}</version>
       <type>nar</type>
       <classifier>amd64-Linux-gcc-shared</classifier>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>dev.openrs2</groupId>
@@ -57,6 +58,7 @@
       <version>${openrs2.natives.version}</version>
       <type>nar</type>
       <classifier>amd64-Linux-gcc-shared</classifier>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
