Add macOS natives

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,22 @@
       <classifier>amd64-Linux-gcc-shared</classifier>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>dev.openrs2</groupId>
+      <artifactId>openrs2-gl-natives</artifactId>
+      <version>${openrs2.natives.version}</version>
+      <type>nar</type>
+      <classifier>i386-MacOSX-gcc-shared</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>dev.openrs2</groupId>
+      <artifactId>openrs2-gl-natives</artifactId>
+      <version>${openrs2.natives.version}</version>
+      <type>nar</type>
+      <classifier>x86_64-MacOSX-gcc-shared</classifier>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <repositories>
