--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>dev.openrs2</groupId>
     <artifactId>openrs2-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
 
   <artifactId>openrs2-natives-all</artifactId>
@@ -40,7 +40,7 @@
 
   <properties>
     <openrs2.natives.directory>${project.build.directory}/dependency/lib</openrs2.natives.directory>
-    <openrs2.natives.version>1.0.0-SNAPSHOT</openrs2.natives.version>
+    <openrs2.natives.version>1.0.0</openrs2.natives.version>
   </properties>
 
   <dependencies>
