--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>openrs2-natives-all</artifactId>
-  <version>2.0.0</version>
+  <version>2.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>OpenRS2 All Natives</name>
@@ -28,7 +28,7 @@
     <connection>scm:git:https://git.openrs2.dev/openrs2/openrs2-natives-all.git</connection>
     <developerConnection>scm:git:git@git.openrs2.dev:openrs2/openrs2-natives-all.git</developerConnection>
     <url>https://git.openrs2.dev/openrs2/openrs2-natives-all</url>
-    <tag>v2.0.0</tag>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>Gitea</system>
