--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
     <url>https://git.openrs2.dev/openrs2/openrs2-natives-all/issues</url>
   </issueManagement>
   <ciManagement>
-    <system>Jenkins</system>
-    <url>https://build.openrs2.dev/job/openrs2-natives-all/</url>
+    <system>Drone</system>
+    <url>https://build.openrs2.dev/openrs2/openrs2-natives-all/</url>
   </ciManagement>
 
   <properties>
