--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>dev.openrs2</groupId>
+    <groupId>org.openrs2</groupId>
     <artifactId>openrs2-parent</artifactId>
-    <version>1.0.11</version>
+    <version>1.0.13</version>
   </parent>
 
   <artifactId>openrs2-natives-all</artifactId>
@@ -19,18 +19,18 @@
   </description>
 
   <scm>
-    <connection>scm:git:https://git.openrs2.dev/openrs2/openrs2-natives-all.git</connection>
-    <developerConnection>scm:git:git@git.openrs2.dev:openrs2/openrs2-natives-all.git</developerConnection>
-    <url>https://git.openrs2.dev/openrs2/openrs2-natives-all</url>
+    <connection>scm:git:https://git.openrs2.org/openrs2/openrs2-natives-all.git</connection>
+    <developerConnection>scm:git:git@git.openrs2.org:openrs2/openrs2-natives-all.git</developerConnection>
+    <url>https://git.openrs2.org/openrs2/openrs2-natives-all</url>
     <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>Gitea</system>
-    <url>https://git.openrs2.dev/openrs2/openrs2-natives-all/issues</url>
+    <url>https://git.openrs2.org/openrs2/openrs2-natives-all/issues</url>
   </issueManagement>
   <ciManagement>
     <system>Drone</system>
-    <url>https://build.openrs2.dev/openrs2/openrs2-natives-all/</url>
+    <url>https://build.openrs2.org/openrs2/openrs2-natives-all/</url>
   </ciManagement>
 
   <properties>
@@ -125,7 +125,7 @@
     <repository>
       <id>openrs2</id>
       <name>OpenRS2</name>
-      <url>https://repo.openrs2.dev/repository/openrs2/</url>
+      <url>https://repo.openrs2.org/repository/openrs2/</url>
       <releases>
         <enabled>true</enabled>
         <updatePolicy>never</updatePolicy>
@@ -137,7 +137,7 @@
     <repository>
       <id>openrs2-snapshots</id>
       <name>OpenRS2 Snapshots</name>
-      <url>https://repo.openrs2.dev/repository/openrs2-snapshots/</url>
+      <url>https://repo.openrs2.org/repository/openrs2-snapshots/</url>
       <releases>
         <enabled>false</enabled>
       </releases>
