--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>openrs2-natives-all</artifactId>
-  <version>2.0.2-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>pom</packaging>
 
   <name>OpenRS2 All Natives</name>
@@ -22,7 +22,7 @@
     <connection>scm:git:https://git.openrs2.org/openrs2/openrs2-natives-all.git</connection>
     <developerConnection>scm:git:git@git.openrs2.org:openrs2/openrs2-natives-all.git</developerConnection>
     <url>https://git.openrs2.org/openrs2/openrs2-natives-all</url>
-    <tag>HEAD</tag>
+    <tag>v3.0.0</tag>
   </scm>
   <issueManagement>
     <system>Gitea</system>
